--- a/desafios-propostos/dp008/area-amarela.html
+++ b/desafios-propostos/dp008/area-amarela.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="imagens/favicon-html.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon/favicon-html.ico" type="image/x-icon">
     <title>Desafio Proposto 8 - Amarelo</title>
 </head>
 <body bgcolor="yellow">
     <h1><font color="green">Pagina Amarela</font></h1>
     <p><font color="green">Você agora está na área amarela. Você acessou clicando no segundo link da página principal</font></p>
     <ul>
-        <li><strong><a href="area-cinza.html"><font color="green">Voltar para a página cinza</font></a></strong></li>
+        <li><strong><a href="index.html"><font color="green">Voltar para a página cinza</font></a></strong></li>
         <li><strong><a href="area-verde.html"><font color="green">Acessar a página verde</font></a></strong></li>
     </ul>
 </body>
