--- a/desafios-propostos/dp003/index.html
+++ b/desafios-propostos/dp003/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <title>Desafio Proposto 3</title>
 </head>
 <body>
     <h1>Desafio do Mapa</h1>
     <p>Agora chegou a hora de treinar um pouco o uso de imagens, parágrafos e quebras de linhas.</p>
-    <img src="mapa03.png" alt="">
-    <img src="mapa07.png" alt="">
-    <img src="mapa05.png" alt=""><br>
-    <img src="mapa09.png" alt="">
-    <img src="mapa01.png" alt="">
-    <img src="mapa08.png" alt=""><br>
-    <img src="mapa06.png" alt="">
-    <img src="mapa02.png" alt="">
-    <img src="mapa04.png" alt="">
+    <img src="imagens/mapa03.png" alt="">
+    <img src="imagens/mapa07.png" alt="">
+    <img src="imagens/mapa05.png" alt=""><br>
+    <img src="imagens/mapa09.png" alt="">
+    <img src="imagens/mapa01.png" alt="">
+    <img src="imagens/mapa08.png" alt=""><br>
+    <img src="imagens/mapa06.png" alt="">
+    <img src="imagens/mapa02.png" alt="">
+    <img src="imagens/mapa04.png" alt="">
 </body>
 </html>
