--- a/desafios-propostos/dp006/index.html
+++ b/desafios-propostos/dp006/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
     <title>Desafio Proposto 6</title>
 </head>
 <body>
@@ -18,6 +18,5 @@
         <li><abbr title="Use a tag &lt;ol&gt; e &lt;li&gt;">Listas numeradas</abbr></li>
         <li><abbr title="Use a tag &lt;ul&gt; e &lt;li&gt;">Listas com demarcadores</abbr></li>
     </ul>
-    <img src="" alt="">
 </body>
 </html>
