--- a/desafios-propostos/dp009/hardware.html
+++ b/desafios-propostos/dp009/hardware.html
@@ -11,7 +11,7 @@
         <h1><font color="white">Curso de Hardware</font></h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/iT6E92Kt38o?si=M61VGD8JThpNQUI9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <p><a href="https://www.youtube.com/watch?v=iT6E92Kt38o&list=PLHz_AreHm4dn1JHgN9wpbIUhzZmycYQXW" target="_blank" rel="author"><font color="white">Veja o curso completo</font></a></p>
-        <a href="principal.html"><img src="imagens/voltar.png" alt="Botão de voltar"></a>
+        <a href="index.html"><img src="imagens/voltar.png" alt="Botão de voltar"></a>
     </center>
 </body>
 </html>
