--- a/desafios-propostos/dp009/html5.html
+++ b/desafios-propostos/dp009/html5.html
@@ -11,7 +11,7 @@
         <h1><font color="white">Curso de HTML5</font></h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/rsFCVjr5yxc?si=PJQs5SOAhmLWrKGh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <p><a href="https://www.youtube.com/watch?v=epDCjksKMok&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o" target="_blank" rel="author"><font color="white">Veja o curso completo</font></a></p>
-        <a href="principal.html"><img src="imagens/voltar.png" alt="Botão de Voltar"></a>
+        <a href="index.html"><img src="imagens/voltar.png" alt="Botão de Voltar"></a>
     </center>
 </body>
 </html>
