--- a/desafios-propostos/dp009/js.html
+++ b/desafios-propostos/dp009/js.html
@@ -11,7 +11,7 @@
         <h1><font color="white">Curso de JavaScript</font></h1>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/BXqUH86F-kA?si=SSXkFyNWMiysuE8y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <p><a href="https://www.youtube.com/watch?v=1-w1RfGIov4&list=PLHz_AreHm4dlsK3Nr9GVvXCbpQyHQl1o1&index=1" target="_blank" rel="author"><font color="white">Veja o curso completo</font></a></p>
-        <a href="principal.html"><img src="imagens/voltar.png" alt="Botão de voltar"></a>
+        <a href="index.html"><img src="imagens/voltar.png" alt="Botão de voltar"></a>
     </center>
 </body>
 </html>
