--- a/desafios-propostos/dp010/index.html
+++ b/desafios-propostos/dp010/index.html
@@ -19,7 +19,7 @@
         <a href="#" target="_self">Notícias</a>
 
         <a href="#" target="_self">Curiosidades</a>
-
+        
         <a href="#" target="_self">Fale Conosco</a>
     </nav>
     <main>
@@ -100,7 +100,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="#">Matheus J. de Luna</a> <br> para o projeto de HTML5 e CSS3 do <a href="https://www.youtube.com/@CursoemVideo" target="_blank" author="external">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://github.com/jardluna" target="_blank">Matheus J. de Luna</a> <br> para o projeto de HTML5 e CSS3 do <a href="https://www.youtube.com/@CursoemVideo" target="_blank" author="external">CursoemVideo</a>. ver-2.1.</p>
     </footer>
 </body>
 </html>
