--- a/exercicios/ex010/index.html
+++ b/exercicios/ex010/index.html
@@ -14,7 +14,7 @@
         Você pode acessar meu <a href="https://github.com/jardluna" target="_blank" rel="external">repositório público no GitHub.</a> <!--rel="external" É USADO PARA LINKS EXTERNOS-->
     </p>
     <p>
-        Você também pode acessar o meu <abbr title="Canal do Gustavo Guanabara"><a href="http://youtube.com/cursoemvideo/" target="_blank" rel="external">canal gratuito no YouTube.</a></abbr> <!--rel="external" É USADO PARA LINKS EXTERNOS-->
+        Você também pode acessar o canal do Gustavo Guanabara <abbr title="Canal do Gustavo Guanabara"><a href="http://youtube.com/cursoemvideo/" target="_blank" rel="external">gratuito no YouTube.</a></abbr> <!--rel="external" É USADO PARA LINKS EXTERNOS-->
     </p>
     <h2>Usando Links Internos</h2>
     <p>
