--- a/exercicios/ex010/noticias/pag003.html
+++ b/exercicios/ex010/noticias/pag003.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Terceira Página</h1>
     <p>
-        Esta é a Terceira Página de Notícias.
+        Esta é a página de Notícias.
     </p>
     <p>
         <a href="../index.html">Clique aqui</a> para voltar para a Primeira Página.
