--- a/exercicios/ex015/index.html
+++ b/exercicios/ex015/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 15</title>
-    <link rel="stylesheet" href="style.css"> <!--USO DE CSS EXTERNO (MAIS RECOMENDADO)-->
+    <link rel="stylesheet" href="css/style.css"> <!--USO DE CSS EXTERNO (MAIS RECOMENDADO)-->
     <style>
         h1 {
             text-decoration: underline;
