--- a/exercicios/ex016/cor02.html
+++ b/exercicios/ex016/cor02.html
@@ -16,5 +16,6 @@
 </head>
 <body>
     <h1 style="color: white; text-align: center;">Gradiente em CSS</h1>
+    <a href="index.html" class="teste">Teste Principal - Clique Aqui</a>
 </body>
 </html>
