--- a/exercicios/ex016/index.html
+++ b/exercicios/ex016/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 16</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main>
@@ -37,6 +37,9 @@
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam alias obcaecati pariatur sapiente incidunt ab commodi voluptas suscipit. Incidunt provident quibusdam eligendi sint voluptates officiis fuga. Sit sapiente ad nobis!
         </p>
+        <a href="cor01.html" class="teste">Teste 1 - Clique Aqui</a>
+        <br>
+        <a href="cor02.html" class="teste">Teste 2 - Clique Aqui</a>
     </main>
 </body>
 </html>
