--- a/exercicios/ex017/fonte02.html
+++ b/exercicios/ex017/fonte02.html
@@ -45,5 +45,6 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, mollitia tenetur? Quaerat impedit sapiente consectetur autem nihil architecto totam quae ipsa possimus eaque unde libero, tenetur, expedita sint culpa corporis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo excepturi temporibus dolore voluptates aperiam atque veritatis? Quidem, pariatur quae. Odit velit labore accusamus cum, dolores error numquam nobis facere minima!
     </p>
+    <a href="index.html">teste 1</a>
 </body>
 </html>
