--- a/exercicios/ex017/index.html
+++ b/exercicios/ex017/index.html
@@ -54,5 +54,6 @@
     <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat labore beatae maiores nisi nesciunt voluptatibus. Velit, modi laborum. Nulla laudantium sequi veniam facilis! Porro officiis quos quae optio facere itaque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi maxime quia nobis nesciunt corporis ullam earum, itaque voluptas quidem, sit ipsam. Dolor perspiciatis numquam mollitia, quas quod corporis tempore labore.
     </p>
+    <a href="fonte02.html">teste 2</a>
 </body>
 </html>
