--- a/exercicios/ex018/fonte02.html
+++ b/exercicios/ex018/fonte02.html
@@ -39,5 +39,6 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio nam maxime nesciunt dolorem necessitatibus asperiores harum. Voluptatem, placeat eos, natus error dignissimos mollitia, accusantium impedit vel voluptatum maxime voluptates nostrum. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolorem, debitis a perspiciatis distinctio consequuntur cupiditate doloribus animi dicta repellat? Qui voluptatem eaque reprehenderit, delectus veniam alias eveniet. Ex, beatae.
     </p>
+    <a href="index.html">TESTE 2</a>
 </body>
 </html>
