--- a/exercicios/ex018/index.html
+++ b/exercicios/ex018/index.html
@@ -40,5 +40,6 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, in cum eaque maiores dicta error delectus et inventore aliquam sunt asperiores libero, accusantium expedita quidem! Obcaecati dolorem quibusdam voluptates odio? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam praesentium, eius voluptas aut tempora consectetur, repellendus sapiente culpa harum est pariatur ea odio officiis deleniti laboriosam facilis temporibus ex consequatur!
     </p>
+    <a href="fonte02.html">TESTE 1</a>
 </body>
 </html>
