--- a/exercicios/ex020/index.html
+++ b/exercicios/ex020/index.html
@@ -41,5 +41,7 @@
         <p>Texto escondido!</p>
     </div>
     <p>Fim do exemplo</p>
+    <a href="links.html">TESTE 2</a>
+    <a href="pseudoclasse.html">TESTE 3</a>
 </body>
 </html>
