--- a/exercicios/ex020/links.html
+++ b/exercicios/ex020/links.html
@@ -14,5 +14,6 @@
         <li><a href="http://youtube.com/cursoemvideo/" target="_blank" class="especial">Canal do YouTube</a></li>
         <li><a href="http://www.cursoemvideo.com" target="_blank">Site do CursoemVideo</a></li>
     </ul>
+    <a href="index.html">TESTE 1</a>
 </body>
 </html>
