--- a/exercicios/ex021/caixa02.html
+++ b/exercicios/ex021/caixa02.html
@@ -117,6 +117,7 @@
         <p>Desenvolvido pelo CursoemVideo</p>
     </footer>
     <div class="bola"><A></A></div>
+    <a href="index.html">TESTE 1</a>
 </body>
 </html>
 <!--<div></div> = Box-level-->
