--- a/exercicios/ex021/caixa03.html
+++ b/exercicios/ex021/caixa03.html
@@ -8,7 +8,7 @@
         .borda {
             border: 20px solid transparent;
             padding: 10px;
-            border-image-source: url(borda.png);
+            border-image-source: url(imagens/borda.png);
             border-image-slice: 30;
             border-image-repeat: repeat;
             /*
@@ -20,5 +20,6 @@
 <body>
     <h1>Borda Personalizada</h1>
     <h1 class="borda">Teste de Borda</h1>
+    <a href="index.html">TESTE 1</a>
 </body>
 </html>
