--- a/exercicios/ex021/index.html
+++ b/exercicios/ex021/index.html
@@ -23,24 +23,20 @@
 
             /*Borda*/
             border-style: solid;
-            border-color: ; /*Shorthand*/
             border-top-color: red;
             border-right-color: blue;
             border-bottom-color: green;
             border-left-color: yellow;
-            border-width: ; /*Shorthand*/
             border-top-width: 10px;
             border-right-width: 15px;
             border-bottom-width: 10px;
             border-left-width: 15px;
-            border-radius: ; /*Shorthand*/
             border-top-right-radius: 60px;
             border-bottom-right-radius: 20px;
             border-bottom-left-radius: 60px;
             border-top-left-radius: 20px;
 
             /*Preenchimento*/
-            padding: ; /*Shorthand*/
             padding-top: 20px;
             padding-right: 20px;
             padding-bottom: 20px;
@@ -48,10 +44,6 @@
 
             /*Margin*/
             margin: auto; /*Shorthand*/
-            margin-top: ;
-            margin-right: ;
-            margin-bottom: ;
-            margin-left: ;
 
             /*Outline*/
             outline-style: dashed;
@@ -73,5 +65,7 @@
     <h1 class="titulo">Modelo de Caixas</h1>
     <h1 class="box1">Exemplo de caixa box-level</h1>
     <p>Parágrafos também são exemplos de box-level, mas os <a href="#"> links são exemplos de caixas inline-level</a>. Vamos ver como tudo isso funciona.</p>
+    <a href="caixa02.html">TESTE 2</a>
+    <a href="caixa03.html">TESTE 3</a>
 </body>
 </html>
