--- a/exercicios/ex004/index.html
+++ b/exercicios/ex004/index.html
@@ -9,9 +9,9 @@
     <h1>Testando Cargas e Imagens</h1>
     <hr>
     <p>Abaixo você vai ver uma imagem que está na mesma pasta</p>
-    <img src="logo-html5.png" alt="Logo HTML5">
+    <img src="imagens/logo-html5.png" alt="Logo HTML5">
     <p>Podemos também carregar imagens que estão em sub-pastas</p>
-    <img src="imagens-logo/logo-css3.png" alt="Logo CSS3">
+    <img src="imagens/logo-css3.png" alt="Logo CSS3">
     <p>Também podemos carregar imagens externas</p>
     <img src="https://a.thumbs.redditmedia.com/zDOFJTXd6fmlD58VDGypiV94Leflz11woxmgbGY6p_4.png" alt="Logo JavaScript"> <!--IMAGEM ANEXADA DE LINK EXTERNO (URL)-->
 </body>
