--- a/exercicios/ex016/cor01.html
+++ b/exercicios/ex016/cor01.html
@@ -50,5 +50,6 @@
     <h2 style="background-color: hsl(39, 80%, 40%); color: white; font-family: Arial, Helvetica, sans-serif;">Teste de Monocromia</h2>
     <h2 style="background-color: hsl(39, 70%, 30%); color: white; font-family: Arial, Helvetica, sans-serif;">Teste de Monocromia</h2>
     <h2 style="background-color: hsl(39, 60%, 20%); color: white; font-family: Arial, Helvetica, sans-serif;">Teste de Monocromia</h2>
+    <a href="index.html" class="teste">Teste Principal - Clique Aqui</a>
 </body>
 </html>
