--- a/exercicios/ex019/index.html
+++ b/exercicios/ex019/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 19</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1 id="principal" class="destaque">Seletores Personalizados</h1>
