--- a/desafios-propostos/dp012/html/index.html
+++ b/desafios-propostos/dp012/html/index.html
@@ -26,7 +26,7 @@
             Vou dizer tudo em poesia.
         </p>
     </section>
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -47,7 +47,7 @@
             Se o saite é muito bom <br>
             Ele vale um alto preço.
         </p>
-        
+        <br>
         <p>
             Pra piorar a liguagem <br>
             O emoticom é um risco <br>
@@ -58,7 +58,7 @@
             Decifre esse rabisco.
         </p>
     </section>
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -79,7 +79,7 @@
             O mundo ficou cativo <br>
             Da tecnologia do agora.
         </p>
-
+        <br>
         <p>
             Felizmente, pra orar <br>
             Não precisa de internet <br>
