--- a/desafios-propostos/dp012/html/index.html
+++ b/desafios-propostos/dp012/html/index.html
@@ -91,7 +91,7 @@
         </p>
     </section>
     <footer>
-        <p>Site criado por <a href="http://jardluna.github.io" target="_blank">Matheus J. de Luna</a> <br> para o projeto de HTML5 e CSS3 do <a href="http://www.cursoemvideo.com" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://jardluna.github.io/meu-perfil/" target="_blank">Matheus J. de Luna</a> <br> para o projeto de HTML5 e CSS3 do <a href="http://www.cursoemvideo.com" target="_blank">CursoemVideo</a>.</p>
     </footer>
 </body>
 </html>
