--- a/desafios-propostos/dp014/html/index.html
+++ b/desafios-propostos/dp014/html/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <title>Projeto Redes Sociais</title>
 </head>
 <body>
-    
+    <main>
+        <section class="telefone">
+
+        </section>
+        <section class="redeSociais">
+
+        </section>
+    </main>
 </body>
 </html>
