--- a/desafios-propostos/dp014/html/index.html
+++ b/desafios-propostos/dp014/html/index.html
@@ -13,12 +13,12 @@
             <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
         </section>
         <section class="redeSociais">
-            <a href="#" target="tela"><img src="../images/logo-home.jpg" alt=""></a> <br>
-            <a href="#" target="tela"><img src="../images/logo-youtube.jpg" alt=""></a> <br>
-            <a href="#" target="tela"><img src="../images/logo-github.jpg" alt=""></a> <br>
-            <a href="#" target="tela"><img src="../images/logo-instagram.jpg" alt=""></a> <br>
-            <a href="#" target="tela"><img src="../images/logo-twitter.jpg" alt=""></a> <br>
-            <a href="#" target="tela"><img src="../images/logo-facebook.jpg" alt=""></a>
+            <a href="../html/home.html" target="tela"><img src="../images/logo-home.jpg" alt=""></a> <br>
+            <a href="../html/youtube.html" target="tela"><img src="../images/logo-youtube.jpg" alt=""></a> <br>
+            <a href="../html/github.html" target="tela"><img src="../images/logo-github.jpg" alt=""></a> <br>
+            <a href="../html/instagram.html" target="tela"><img src="../images/logo-instagram.jpg" alt=""></a> <br>
+            <a href="../html/twitter.html" target="tela"><img src="../images/logo-twitter.jpg" alt=""></a> <br>
+            <a href="../html/facebook.html" target="tela"><img src="../images/logo-facebook.jpg" alt=""></a>
         </section>
     </main>
 </body>
