--- a/exercicios/ex025/html/form002.html
+++ b/exercicios/ex025/html/form002.html
@@ -12,7 +12,7 @@
         <p>
             <label for="iusuario">Usuário:</label>
             <input type="text" name="usuario" id="iusuario" required minlength="3" maxlength="15" size="20" placeholder="nome do usuário" autocomplete="username">
-            <p class="observacao">(usuário: mínimo de 3 dígitos e máximo de 15)</p>
+            <p class="observacao">(Usuário: mínimo de 3 dígitos e máximo de 15)</p>
         </p>
         <p>
             <label for="isenha">Senha:</label>
