--- a/exercicios/ex025/html/form002.html
+++ b/exercicios/ex025/html/form002.html
@@ -7,7 +7,7 @@
     <title>Formulário 2</title>
 </head>
 <body>
-    <h1>Teste de formulário</h1>
+    <h1>Teste de formulário - 2</h1>
     <form action="../php/cadastro.php" method="post" autocomplete="on">
         <p>
             <label for="iusuario">Usuário:</label>
