--- a/exercicios/ex025/html/form003.html
+++ b/exercicios/ex025/html/form003.html
@@ -7,7 +7,7 @@
     <title>Formulário 3</title>
 </head>
 <body>
-    <h1>Teste de formulário</h1>
+    <h1>Teste de formulário - 3</h1>
     <form action="../php/cadastro.php" method="get" autocomplete="on">
         <p>
             <label for="inome">Nome:</label>
