--- a/exercicios/ex026/mq001/html/index.html
+++ b/exercicios/ex026/mq001/html/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Chamadas de Media Queries -->
-    <link rel="stylesheet" href="../css/screen.css" media="screen"> <!-- media type screen -->
-    <link rel="stylesheet" href="../css/print.css" media="print"> <!-- media type print -->
+    <link rel="stylesheet" href="../css/screen.css" media="screen"> <!-- media type -->
+    <link rel="stylesheet" href="../css/print.css" media="print"> <!-- media type -->
     <title>Media Queries</title>
 </head>
 <body>
