--- a/exercicios/ex026/mq004/html/index.html
+++ b/exercicios/ex026/mq004/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css" media="all">
-    <link rel="stylesheet" href="../css/media-query.css">
+    <link rel="stylesheet" href="../css/medias-queries.css">
     <title>Media Queries</title>
 </head>
 <body>
