--- a/desafios-propostos/dp015/html/index.html
+++ b/desafios-propostos/dp015/html/index.html
@@ -23,12 +23,12 @@
                     <div class="campo">
                         <span class="material-icons">person</span>
                         <input type="email" name="login" id="ilogin" required autocomplete="email" maxlength="30" placeholder="digite seu e-mail">
-                        <label for="ilogin">Login:</label>
+                        <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
                         <span class="material-icons">vpn_key</span>
                         <input type="password" name="senha" id="isenha" required autocomplete="current-password" minlength="8" maxlength="24" placeholder="digite sua senha">
-                        <label for="isenha">Senha:</label>
+                        <label for="isenha">Senha</label>
                     </div>
                     <input id="submitEntrar" type="submit" value="Entrar">
                     <a href="esqueci.html">
