--- a/desafios-propostos/dp015/html/index.html
+++ b/desafios-propostos/dp015/html/index.html
@@ -25,14 +25,16 @@
                         <input type="email" name="login" id="ilogin" required autocomplete="email" maxlength="30" placeholder="digite seu e-mail">
                         <label for="ilogin">Login</label>
                     </div>
+
                     <div class="campo">
                         <span class="material-icons">vpn_key</span>
                         <input type="password" name="senha" id="isenha" required autocomplete="current-password" minlength="8" maxlength="24" placeholder="digite sua senha">
                         <label for="isenha">Senha</label>
                     </div>
+
                     <input id="submitEntrar" type="submit" value="Entrar">
                     <a href="esqueci.html">
-                        Esqueci a senha <span class="material-icons">mail</span>
+                        Esqueci a senha <span id="esqueciSenha" class="material-icons">mail</span>
                     </a>
                 </form>
             </div>
